// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SummaryCardContainer /> renders snapshot correctly 1`] = `
<div>
  <div
    class="MuiPaper-root SummaryCard-root-1 MuiPaper-elevation0"
  >
    <div
      class="SummaryCard-header-2"
    >
      <div
        class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-animate"
        style="width: 100px; height: 27px;"
      />
      <div
        class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-animate"
        style="width: 60px; height: 27px;"
      />
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="SummaryCardValues-root-41 upTrend"
    >
      <div>
        <div
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-animate"
          style="width: 110px; height: 37px;"
        />
        <div
          class="MuiSkeleton-root MuiSkeleton-rect SummaryCardValues-totalLabel-42 MuiSkeleton-animate"
          style="width: 90px; height: 14px;"
        />
      </div>
      <div>
        <div
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-animate"
          style="width: 50px; height: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SummaryCardContainer /> renders snapshot correctly on error state 1`] = `
<div>
  <div
    class="MuiPaper-root SummaryCard-root-51 MuiPaper-elevation0"
  >
    <div
      class="SummaryCard-header-52"
    >
      <div
        class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-animate"
        style="width: 100px; height: 27px;"
      />
      <div
        class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-animate"
        style="width: 60px; height: 27px;"
      />
    </div>
    <hr
      class="MuiDivider-root"
    />
    <div
      class="SummaryCardValues-root-91 upTrend"
    >
      <div>
        <div
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-animate"
          style="width: 110px; height: 37px;"
        />
        <div
          class="MuiSkeleton-root MuiSkeleton-rect SummaryCardValues-totalLabel-92 MuiSkeleton-animate"
          style="width: 90px; height: 14px;"
        />
      </div>
      <div>
        <div
          class="MuiSkeleton-root MuiSkeleton-rect MuiSkeleton-animate"
          style="width: 50px; height: 16px;"
        />
      </div>
    </div>
  </div>
</div>
`;
